# Research-Paper-RAG-Assistant

./: .gitignore  README.md  env.example.txt  main.py  pyproject.toml  requirements.txt
data/papers/: .gitkeep
data/processed/: .gitkeep
src/: __init__.py  config.py
src/api/: __init__.py  app.py
src/cli/: __init__.py  main.py
src/ingestion/: __init__.py  chunker.py  pdf_parser.py  preprocessor.py
src/llm/: __init__.py  chat.py  prompts.py  qa_engine.py
src/retrieval/: __init__.py  embeddings.py  retriever.py  vector_store.py
static/: index.html
tests/: __init__.py  test_ingestion.py  test_prompts.py
